fix: change spec and generate all libs
